alignment fix

--- a/src/About.css
+++ b/src/About.css
@@ -49,7 +49,7 @@ p {
 .cursive-text {
   list-style: none;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  text-align: center;
+  text-align: left;
   margin-bottom: 20px;
 }
 
@@ -60,7 +60,7 @@ p {
   }
 
   h2 {
-    text-align: left; /* Left-align h2 on smaller screens */
+    text-align: center; /* Left-align h2 on smaller screens */
     margin-left: 20px;
     margin-right: 20px;
   }
@@ -77,7 +77,7 @@ p {
   }
 
   h2 {
-    text-align: left; /* Left-align h2 on smaller screens */
+    text-align: center; /* Left-align h2 on smaller screens */
     margin-left: 10px;
     margin-right: 10px;
   }
